# med-rules

./: Cargo.toml
crates/w-med/: Cargo.toml  index.html  webbuild.sh
crates/w-med/src/: lib.rs
crates/w-med/web/: index.html  script.js  style.css
src/: entity.rs  generation.rs  lib.rs  main.rs  simulator.rs  util.rs
