[package]
name = "w-med"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
med-rules = { path = "../../" }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.83"
log = "0.4.17"
